Added the Manage User - Personnel html file

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 <span>Manage Vaccine</span></a>
         </li>
 
-        <!-- Nav Item - Pages Collapse Menu -->
+        <!-- Nav Item - Manage Users -->
         <li class="nav-item active">
             <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseTwo"
                aria-expanded="true" aria-controls="collapseTwo">
@@ -59,7 +59,7 @@
             <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionSidebar">
                 <div class="bg-white py-2 collapse-inner rounded">
                     <h6 class="collapse-header">Users:</h6>
-                    <a class="collapse-item" href="#">Personnel</a>
+                    <a class="collapse-item" href="managePersonnel.html">Personnel</a>
                     <a class="collapse-item" href="#">Patients</a>
                 </div>
             </div>
