--- a/managePersonnel.html
+++ b/managePersonnel.html
@@ -5,6 +5,9 @@
     <title> Personnel </title>
 </head>
 <body>
-<p> hello </p>
+<div class="buttonContainer">
+    <button type ='file'>Upload File</button>
+    <button type='button' onclick="window.location.href='managePersonnel_AddUser.html'">+ Add User</button>
+</div>
 </body>
 </html>
