--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                 <div class="bg-white py-2 collapse-inner rounded">
                     <h6 class="collapse-header">Users:</h6>
                     <a class="collapse-item" href="managePersonnel.html">Personnel</a>
-                    <a class="collapse-item" href="#">Patients</a>
+                    <a class="collapse-item" href="managePatient.html">Patients</a>
                 </div>
             </div>
         </li>
