--- a/managePatient.html
+++ b/managePatient.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Title</title>
+  <title> Patient </title>
 </head>
 <body>
 <div class="buttonContainer">
