--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 
         <!-- Nav Item - Report -->
         <li class="nav-item active">
-            <a class="nav-link" href="index.html">
+            <a class="nav-link" href="ManageReportHOME.html">
                 <i class="fas fa-fw fa-tachometer-alt"></i>
                 <span>Report</span></a>
         </li>
