--- a/Admin/index.html
+++ b/Admin/index.html
@@ -17,7 +17,7 @@
             rel="stylesheet">
 
     <!-- Custom styles for this template-->
-    <link href="css/cssAdmin.css" rel="stylesheet">
+    <link href="../css/cssAdmin.css" rel="stylesheet">
 
 </head>
 
@@ -30,7 +30,7 @@
         <!-- Sidebar - Brand -->
         <a class="sidebar-brand d-flex align-items-center justify-content-left" href="index.html">
             <div class="sidebar-brand-icon">
-                 <img style="width:150px;" src="img/SMIT+.png" alt="Baguio Logo">
+                 <img style="width:150px;" src="../img/SMIT+.png" alt="Baguio Logo">
             </div>
         </a>
 
@@ -74,7 +74,7 @@
 
         <!-- Nav Item - Report -->
         <li class="nav-item active">
-            <a class="nav-link" href="ManageReportHOME.html">
+            <a class="nav-link" href="../residueFiles/ManageReportHOME.html">
                 <i class="fas fa-fw fa-tachometer-alt"></i>
                 <span>Report</span></a>
         </li>
