--- a/residueFiles/ManageReportHOME.html
+++ b/residueFiles/ManageReportHOME.html
@@ -18,16 +18,16 @@
           rel="stylesheet">
 
     <!-- Custom styles for this template-->
-    <link href="css/cssAdmin.css" rel="stylesheet">
+    <link href="../css/cssAdmin.css" rel="stylesheet">
 </head>
 <body>
     <div class="top">
         <button class="btn">
-            <img id="notif" src="img/notif.png">
+            <img id="notif" src="../img/notif.png">
         </button>
 
         <button class="btn">
-            <img id="settings" src="img/settings.png">
+            <img id="settings" src="../img/settings.png">
         </button>
     </div>
 
@@ -36,7 +36,7 @@
             <form action="/action_page.php">
              <input type="text" placeholder="Search" name="search">
             <button type="submit"><i class="fa fa-search"></i>
-                <img id="searchButton" src="img/magnifying-glass.png">
+                <img id="searchButton" src="../img/magnifying-glass.png">
              </button>
             </form>
         </div>
