added some missing codes

--- a/Admin/login.html
+++ b/Admin/login.html
@@ -1,8 +1,20 @@
+<!DOCTYPE html>
+<html lang="en">
+/***
+* @Author Dominic Austin Sicat, Hudson Kit Natividad
+* Date Created: June 27, 2021
+* Description: Login HTML Elements for receiving credentials from the users
+*/
+<head>
+<meta charset="UTF-8">
+<title>Baguio SMIT+ | Login</title>
+<meta charset="UTF-8">
+<meta content="width=device-width, initial-scale=1.0, shrink-to-fit=no" name="viewport">
 <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
 <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
 <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-<!------ Include the above in your HEAD tag ---------->
 <link href="css/LoginCSS.css" rel="stylesheet">
+</head>
 
 <body>
 <div id="login">
