--- a/Admin/resetPW.html
+++ b/Admin/resetPW.html
@@ -1,6 +1,26 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
+/***
+* @Author Dominic Austin Sicat, Hudson Kit Natividad
+* Date Created: June 27, 2021
+* Description: Resetting Password HTML Elements
+*/
+
+<meta charset="UTF-8">
+<title> Reset Password</title>
+<meta charset="UTF-8">
+<meta content="width=device-width, initial-scale=1.0, shrink-to-fit=no" name="viewport">
+<link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
+<script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
+<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+<link href="css/LoginCSS.css" rel="stylesheet">
+</head>
+
+<body>
     <h1>RESET PASSWORD</h1>
     <input type="text" id="resetPW1" name="pw1" placeholder='Enter new password'><br>
     <input type="text" id="resetPW2" name="pw2" placeholder='Retype password'><br>
     <input type="submit" value="Continue">
+</body>
+
 </html>
