--- a/Admin/forgetPW.html
+++ b/Admin/forgetPW.html
@@ -1,6 +1,26 @@
-<html lang= "en">
+<!DOCTYPE html>
+<html lang="en">
+/***
+* @Author Dominic Austin Sicat, Hudson Kit Natividad
+* Date Created: June 27, 2021
+* Description: HTML Elements for forgetting Password
+*/
+
+<meta charset="UTF-8">
+<title> Forget Password </title>
+<meta charset="UTF-8">
+<meta content="width=device-width, initial-scale=1.0, shrink-to-fit=no" name="viewport">
+<link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
+<script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
+<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+<link href="css/LoginCSS.css" rel="stylesheet">
+</head>
+
+<body>
     <h1>FORGET PASSWORD</h1>
     <p>Enter registered email/Mobile Number to continue</p>
     <input type="text" id="ForgetAcc" name="ForgetAcc" placeholder='Email / Mobile Number'><br>
     <button onclick="window.location.href='forgetPW-ver.html'">Continue</button>
+</body>
+
 </html>
