--- a/Admin/index.html
+++ b/Admin/index.html
@@ -59,8 +59,8 @@
             <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionSidebar">
                 <div class="bg-white py-2 collapse-inner rounded">
                     <h6 class="collapse-header">Users:</h6>
-                    <a class="collapse-item" href="managePersonnel.html">Personnel</a>
-                    <a class="collapse-item" href="managePatient.html">Patients</a>
+                    <a class="collapse-item" href="ManageUsers/managePersonnel.html">Personnel</a>
+                    <a class="collapse-item" href="ManageUsers/managePatient.html">Patients</a>
                 </div>
             </div>
         </li>
