--- a/Admin/login.html
+++ b/Admin/login.html
@@ -23,18 +23,18 @@
         <div id="login-row" class="row justify-content-center align-items-center">
             <div id="login-column" class="col-md-6">
                 <div id="login-box" class="col-md-12">
-                    <form id="login-form" class="form" action="" method="post">
+                    <form id="login-form" class="form" action="EmployeeLoginAUthentication.php" method="post">
                         <h3 class="text-center text-info"></h3>
                         <div class="form-group">
                             <label for="username" class="text-info">Username:</label><br>
-                            <input type="text" name="username" id="username" class="form-control">
+                            <input type="text" id = "user" name="username" id="username" class="form-control">
                         </div>
                         <div class="form-group">
                             <label for="password" class="text-info">Password:</label><br>
-                            <input type="text" name="password" id="password" class="form-control">
+                            <input type="text" id = "password" name="password" id="password" class="form-control">
                         </div>
                         <div class="form-button">
-                            <input type="submit" name="submit" class="btn btn-info btn-md" value="Login">
+                            <input type="submit" id= "loginButton" name="submit" class="btn btn-info btn-md" value="Login">
                         </div>
                         <div class="form-link">
                             <a href="resetPW.html" id="forgot_pswd">Forget password?</a>
