--- a/Admin/ManageVaccine.html
+++ b/Admin/ManageVaccine.html
@@ -9,15 +9,20 @@
 <head>
     <meta charset="UTF-8">
     <meta content="width=device-width, initial-scale=1.0, shrink-to-fit=no" name="viewport">
-    <script crossorigin="anonymous" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
-    <script crossorigin="anonymous" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
-    <script crossorigin="anonymous" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
-    <link crossorigin="anonymous" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" rel="stylesheet">
+    <script crossorigin="anonymous" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+            src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
+    <script crossorigin="anonymous" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+            src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
+    <script crossorigin="anonymous" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+            src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+    <link crossorigin="anonymous" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+          integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" rel="stylesheet">
 
 
     <!-- Custom styles for this template-->
     <link href="../css/cssAdmin.css" rel="stylesheet">
     <title>Manage Vaccine</title>
+
 </head>
 <body>
 
@@ -55,59 +60,65 @@
     </form>
 </div>
 
-<button type="button" class="button4 btn-primary" data-toggle="modal" data-target="#add-Vaccine">
+<button id = "addNewVaccineBtn" type="button" class="button4 btn-primary">
     Add New Vaccine
 </button>
 
-<div class="modal fade" id="addNewVaccine" tabindex="-1" role="dialog" aria-labelledby="add-New-Vaccine" aria-hidden="true">
-    <div class="modal-dialog" role="document">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h5 class="modal-title" id="add--New-VaccineTitle">Add New Vaccine</h5>
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
-                </button>
-            </div>
-            <div class="modal-body">
-                <div class="AddNewVaccine-PopUp">
+<div id="myModal" class="modal">
+    <div class="modal-content">
+        <span id = "close" class="close">&times;</span>
+        <div class="AddNewVaccine-PopUp">
+            <h3>Vaccine Details</h3>>
+            <input class="col-xs-12" type="input" name="vaccineName" placeholder="Vaccine Name">
+            <input class="col-xs-12" type="input" name="vaccineManufacturer" placeholder="Vaccine Manufacturer">
+            <input class="col-xs-12" type="input" name="vaccineDescription" placeholder="Vaccine Description">
 
-                    <h3>Vaccine Details</h3>>
-                    <input class="col-xs-12" type="input" name="vaccineName" placeholder="Vaccine Name">
-                    <input class="col-xs-12" type="input" name="vaccineManufacturer" placeholder="Vaccine Manufacturer">
-                    <input class="col-xs-12" type="input" name="vaccineDescription" placeholder="Vaccine Description">
+            <h3>Vaccine Characteristics</h3>>
+            <input class="col-xs-12" type="input" name="vaccineType" placeholder="Vaccine Type">
+            <input class="col-xs-12" type="input" name="vaccineEfficacy" placeholder="Vaccine Efficacy">
+            <input class="col-xs-12" type="input" name="vaccineType" placeholder="Dosage Required">
+            <input class="col-xs-12" type="input" name="vaccineType" placeholder="Dosage Interval">
 
-                    <h3>Vaccine Characteristics</h3>>
-                    <input class="col-xs-12" type="input" name="vaccineType" placeholder="Vaccine Type">
-                    <input class="col-xs-12" type="input" name="vaccineEfficacy" placeholder="Vaccine Efficacy">
-                    <input class="col-xs-12" type="input" name="vaccineType" placeholder="Dosage Required">
-                    <input class="col-xs-12" type="input" name="vaccineType" placeholder="Dosage Interval">
-
-                    <h3> Storage and Handling</h3>>
-                    <input class="col-xs-12" type="input" name="vaccineEfficacy" placeholder="Minimum Temperature">
-                    <input class="col-xs-12" type="input" name="vaccineType" placeholder="Maximum Temperature">
-                    <input class="col-xs-12" type="input" name="vaccineType" placeholder="Life Span">
-                </div>
-            </div>
-
-            <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
-                <button type="button" class="btn btn-primary">Save Changes</button>
-                <button type="button" class="btn btn-secondary">Close</button>
-            </div>
+            <h3> Storage and Handling</h3>>
+            <input class="col-xs-12" type="input" name="vaccineEfficacy" placeholder="Minimum Temperature">
+            <input class="col-xs-12" type="input" name="vaccineType" placeholder="Maximum Temperature">
+            <input class="col-xs-12" type="input" name="vaccineType" placeholder="Life Span">
         </div>
+
+        <button id = "cancel"> Cancel </button>
+        <button id = 'save'> Save Changes</button>
+
     </div>
 </div>
 
 <script>
-    $('#add-Vaccine').on('show.bs.modal', function (event) {
-        var button = $(event.relatedTarget) // Button that triggered the modal
-        var recipient = button.data('whatever') // Extract info from data-* attributes
-        // If necessary, you could initiate an AJAX request here (and then do the updating in a callback).
-        // Update the modal's content. We'll use jQuery here, but you could use a data binding library or other methods instead.
-        var modal = $(this)
-        modal.find('.modal-title')
-        modal.find('.modal-body input').val(recipient)
-    })
+    var modal = document.getElementById("myModal");
+    var addNewVaccinebtn = document.getElementById("addNewVaccineBtn");
+    var span = document.getElementById("close");
+    var cancel = document.getElementById("cancel");
+    var save = document.getElementById("save");
+
+    addNewVaccinebtn.onclick = function (){
+        modal.style.display = "block";
+    }
+
+    span.onclick = function (){
+        modal.style.display = "none";
+    }
+
+    cancel.onclick = function (){
+        modal.style.display = "none";
+    }
+
+    window.onclick = function (event){
+        if(event.target == modal){
+            modal.style.display = "none";
+        }
+    }
+
+    save.onclick = function (){
+        alert("changes has been saved!");
+    }
 </script>
 
 </body>
