--- a/Admin/login.html
+++ b/Admin/login.html
@@ -27,11 +27,11 @@
                         <h3 class="text-center text-info"></h3>
                         <div class="form-group">
                             <label for="username" class="text-info">Username:</label><br>
-                            <input type="text" id = "user" name="username" id="username" class="form-control">
+                            <input type="text" name="username" id="username" class="form-control">
                         </div>
                         <div class="form-group">
                             <label for="password" class="text-info">Password:</label><br>
-                            <input type="text" id = "password" name="password" id="password" class="form-control">
+                            <input type="text" name="password" id="password" class="form-control">
                         </div>
                         <div class="form-button">
                             <input type="submit" id= "loginButton" name="submit" class="btn btn-info btn-md" value="Login">
