--- a/Admin/ManageUsers/managePersonnel.html
+++ b/Admin/ManageUsers/managePersonnel.html
@@ -1,13 +1,125 @@
+<!---/***
+* @Author Krisha Mar M. Macatulad
+* Date Created: July 9, 2021
+* Description: Main page of Manage Users
+*/
+---->
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title> Personnel </title>
+    <meta content="width=device-width, initial-scale=1.0, shrink-to-fit=no" name="viewport">
+    <script crossorigin="anonymous" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+            src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
+    <script crossorigin="anonymous" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+            src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
+    <script crossorigin="anonymous" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+            src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+    <link crossorigin="anonymous" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+          integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" rel="stylesheet">
+
+    <!-- Custom styles for this template-->
+    <link href="../css/cssAdmin.css" rel="stylesheet">
+    <title>Personnel</title>
+
 </head>
 <body>
-<div class="buttonContainer">
-    <button type ='file'>Upload File</button>
-    <button type='button' onclick="window.location.href='managePersonnel_AddUser.html'">+ Add User</button>
+<button type="button" class="button4 btn-primary" data-toggle="modal" data-target="#upload-File">
+    Upload File
+</button>
+
+<!--
+<div class="modal fade" id="uploadFile" tabindex="-1" role="dialog" aria-labelledby="upload-File" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="upload-FileTitle">Upload File</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
+                <button type="button" class="btn btn-primary">Save Changes</button>
+                <button type="button" class="btn btn-secondary">Close</button>
+            </div>
+        </div>
+    </div>
+</div> -->
+<div class="search-container">
+    <form action="/action_page.php">
+        <input type="text" placeholder="Search" name="search">
+        <button type="submit"><i class="fa fa-search"></i>
+            <img id="searchButton" src="../img/magnifying-glass.png">
+        </button>
+    </form>
 </div>
+
+<button id = "addUserBtn" type="button" class="button4 btn-primary">
+    Add User
+</button>
+
+<div id="myModal" class="modal">
+    <div class="modal-content">
+        <span id = "close" class="close">&times;</span>
+        <div class="AddPersonnel-PopUp">
+            <h3>Basic Information</h3>>
+            <input class="col-xs-12" type="input" name="lastName" placeholder="Last Name">
+            <input class="col-xs-12" type="input" name="firstName" placeholder="First Name">
+            <input class="col-xs-12" type="input" name="middleName" placeholder="Middle Name">
+            <label for="suffix"> Suffix Name </label>
+            <select class="formControl" id="suffix">
+                <option> Sr </option>
+                <option> Jr </option>
+                <option> I </option>
+                <option> II </option>
+                <option> III </option>
+            </select>
+
+            <label for="role"> Role </label>
+            <select class="formControl" id="role">
+                <option> City Hall Employee </option>
+                <option> Vaccination Personnel </option>
+            </select>
+            <input class="col-xs-12" type="input" name="contactNumber" placeholder="Contact Number">
+
+        </div>
+
+        <button id = "cancel"> Cancel </button>
+        <button id = 'save'> Save Changes</button>
+
+    </div>
+</div>
+<script>
+    var modal = document.getElementById("myModal");
+    var addUserbtn = document.getElementById("addUserBtn");
+    var span = document.getElementById("close");
+    var cancel = document.getElementById("cancel");
+    var save = document.getElementById("save");
+
+    addUserbtn.onclick = function (){
+        modal.style.display = "block";
+    }
+
+    span.onclick = function (){
+        modal.style.display = "none";
+    }
+
+    cancel.onclick = function (){
+        modal.style.display = "none";
+    }
+
+    window.onclick = function (event){
+        if(event.target == modal){
+            modal.style.display = "none";
+        }
+    }
+
+    save.onclick = function (){
+        alert("Changes has been saved!");
+    }
+</script>
 </body>
-</html>
