Made Some Minor changes on EmployeeLoginAuthentication.php and login.html

--- a/Admin/login.html
+++ b/Admin/login.html
@@ -23,7 +23,7 @@
         <div id="login-row" class="row justify-content-center align-items-center">
             <div id="login-column" class="col-md-6">
                 <div id="login-box" class="col-md-12">
-                    <form id="login-form" class="form" action="EmployeeLoginAUthentication.php" method="post">
+                    <form id="login-form" class="form" action="EmployeeLoginAuthentication.php" method="post">
                         <h3 class="text-center text-info"></h3>
                         <div class="form-group">
                             <label for="username" class="text-info">Username:</label><br>
@@ -31,10 +31,10 @@
                         </div>
                         <div class="form-group">
                             <label for="password" class="text-info">Password:</label><br>
-                            <input type="text" name="password" id="password" class="form-control">
+                            <input type="password" name="password" id="password" class="form-control">
                         </div>
                         <div class="form-button">
-                            <input type="submit" id= "loginButton" name="submit" class="btn btn-info btn-md" value="Login">
+                            <button name ="loginButton" class="btn btn-info btn-md">Login</button>
                         </div>
                         <div class="form-link">
                             <a href="resetPW.html" id="forgot_pswd">Forget password?</a>
