Made changes to the main page of manage user (personnel)

--- a/Admin/ManageDep.html
+++ b/Admin/ManageDep.html
@@ -27,7 +27,7 @@
     </form>
 </div>
 
-<button id = "addDepBtn" type="button" class="button btn-primary">
+<button id = "addDepBtnaddDepBtn" type="button" class="button btn-primary">
     Add Deployment
 </button>
 
