Added initial function of upload button in the main page of manage user (personnel)

--- a/Admin/ManageUsers/managePersonnel.html
+++ b/Admin/ManageUsers/managePersonnel.html
@@ -37,11 +37,31 @@
 
 
 <!--Button for Uploading File-->
-<button type="button" class="button4 btn-primary" data-toggle="modal" data-target="#upload-File">
+<button id="uploadFile" type="button" class="button4 btn-primary" data-toggle="modal" data-target="#upload-File">
     Upload File
 </button>
 
+<!--Modal for adding personnel-->
+<div id="uploadFileModal" class="modal">
+    <div class="modal-content">
+        <span id = "close" class="close">&times;</span>
+        <div id="uploadingFile">
+            <h3> Upload File/s </h3>
+            <p>Upload a list of patients (.csv) <br> or </p>
+            <input type="file" class="form-control" id="fileUpload"/>
+            <button id="browse" type="button" class="'button4 btn-primary"> Browse </button>
+        </div>
 
+        <div id="listFile">
+            <!--temporary uploading-->
+            <h6> Uploaded Files </h6>
+            <p> prereg_09-19-2021_validates.csv</p>
+            <p> prereg_09-21-2021_validates.csv</p>
+        </div>
+
+    </div>
+
+</div>
 
 <!--Button for Adding Personnel Details-->
 <button id = "addUserBtn" type="button" class="button4 btn-primary">
@@ -51,7 +71,7 @@
 <!--Modal for adding personnel-->
 <div id="personnelModal" class="modal">
     <div class="modal-content">
-        <span id = "close" class="close">&times;</span>
+        <span id = "close1" class="close">&times;</span>
         <div class="AddNewVaccine-PopUp">
             <h3>Add USER-Personnel</h3>
             <h4> Basic Information</h4>
@@ -95,10 +115,10 @@
 
 <!--Modal for successful notification-->
 <div id="notifyModal" class="modal">
-    <div class="modal-body">
+    <div class="modal-content">
         <span id = "close3" class="close">&times;</span>
         <img src="../img/checkmark.png">
-        <h5> User Personnel successfully added.</h5>
+        <p> User Personnel successfully added. </p>
     </div>
     <!--instead of close change to Done-->
     <button id = 'exit'> Close </button>
@@ -108,8 +128,11 @@
     var modal = document.getElementById("personnelModal");
     var addModal = document.getElementById("addButtonModal");
     var notifyModal = document.getElementById("notifyModal");
-    var addUserbtn = document.getElementById("addUserBtn");
+    var uploadFileModal = document.getElementById("uploadFileModal")
+    var addUserBtn = document.getElementById("addUserBtn");
+    var uploadFileBtn = document.getElementById("uploadFile")
     var span = document.getElementById("close");
+    var span1 = document.getElementById("close1");
     var span2 = document.getElementById("close2");
     var span3 = document.getElementById("close3");
     var cancel = document.getElementById("cancel");
@@ -117,8 +140,12 @@
     var add = document.getElementById("Add");
     var add2 = document.getElementById("Add2");
 
+    //upload file button
+    uploadFileBtn.onclick = function (){
+        uploadFileModal.style.display = "block";
+    }
     // add button for Add User
-    addUserbtn.onclick = function (){
+    addUserBtn.onclick = function (){
         modal.style.display = "block";
     }
 
@@ -134,10 +161,29 @@
         notifyModal.style.display="block";
     }
 
-    span,span2,span3,exit.onclick = function (){
+    span.onclick = function () {
+        uploadFileModal.style.display = "none";
+    }
+
+    span1.onclick = function () {
         modal.style.display = "none";
-        addModal.style.display = "none";
-        notifyModal.style.display="none"
+    }
+
+    span2.onclick = function (){
+        modal.style.display = "none";
+        addModal.style.display ="none";
+    }
+
+    span3.onclick = function (){
+        modal.style.display = "none";
+        addModal.style.display ="none";
+        notifyModal.style.display = "none";
+    }
+
+    exit.onclick = function (){
+        modal.style.display = "none";
+        addModal.style.display ="none";
+        notifyModal.style.display = "none";
     }
 
     cancel.onclick = function (){
